homelab/kubernetes/deployments/apps/speedtest-plotter/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: speedtest-plotter
  name: speedtest-plotter
spec:
  selector:
    matchLabels:
      app: speedtest-plotter
  replicas: 1
  template:
    metadata:
      labels:
        app: speedtest-plotter
    spec:
      containers:
      - name: speedtest-plotter
        image: ansemjo/speedtest:0.2.2
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 500Mi
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /data
          name: speedtest-plotter-data
      volumes:
        - name: speedtest-plotter-data
          persistentVolumeClaim:
            claimName: speedtest-plotter-data
